<resources>
	<string name="app_name">Supporting LIFE</string>
	<string name="activity_title_home">Home</string>
	<string name="activity_title_user_selection">User Type</string>
	<string name="activity_title_opinions">Opinions</string>
	<string name="activity_title_about">About</string>
	<string name="activity_title_training">Training</string>
	<string name="activity_title_settings">Settings</string>
	<string name="activity_title_help">Help</string>
	<string name="activity_title_video_viewer">Video Viewer</string>
	<string name="activity_title_record_patient_details">Assessment</string>
	<string name="activity_title_submit_patient_record">Submission</string>
	<string name="activity_title_record_imci_assessment">IMCI Assessment</string>
	<string name="activity_title_record_ccm_assessment">CCM Assessment</string>
	<string name="activity_title_imci_assessment_results">IMCI Results</string>
	<string name="activity_title_ccm_assessment_results">CCM Results</string>
	<string name="actionbar_home_description">Home</string>
	<string name="actionbar_separator_description">Title Bar</string>
	<string name="dashboard_opinions_button">Opinions</string>
	<string name="dashboard_about_button">About</string>
	<string name="dashboard_imci_assessment_button">IMCI</string>
	<string name="dashboard_ccm_assessment_button">CCM</string>
	<string name="dashboard_training_button">Training</string>
	<string name="dashboard_settings_button">Settings</string>
	<string name="dashboard_action_settings">Settings</string>
	<string name="dashboard_action_sync">Sync</string>
	<string name="dashboard_action_help">Help</string>
	<string name="dashboard_opinions_icon_font">&#xe000;</string>
	<string name="dashboard_about_icon_font">&#xe003;</string>
	<string name="dashboard_imci_assessment_icon_font">&#xe002;</string>
	<string name="dashboard_ccm_assessment_icon_font">&#xe004;</string>
	<string name="dashboard_training_icon_font">&#xe001;</string>
	<string name="dashboard_settings_icon_font">&#xe005;</string>
	<string name="imci_general_patient_details_title">Patient Details</string>
	<string name="imci_general_patient_details_first_name">First Name:</string>
	<string name="imci_general_patient_details_surname">Surname:</string>
	<string name="imci_general_patient_details_date_of_birth">Date of Birth:</string>
	<string name="imci_general_patient_details_weight">Weight (kg):</string>
	<string name="imci_general_patient_details_temperature">Temperature</string>
	<string name="imci_general_patient_details_radio_gender">Gender:</string>
	<string name="imci_general_patient_details_radio_gender_male">Male</string>
	<string name="imci_general_patient_details_radio_gender_female">Female</string>
	<string name="imci_general_patient_details_problems">What are the child\'s problems?:</string>
	<string name="imci_general_patient_details_review_first_name">First Name</string>
	<string name="imci_general_patient_details_review_surname">Surname</string>
	<string name="imci_general_patient_details_review_date_of_birth">Date of Birth</string>
	<string name="imci_general_patient_details_review_weight">Weight (kg)</string>
	<string name="imci_general_patient_details_review_temperature">Temperature</string>
	<string name="imci_general_patient_details_review_gender">Gender</string>
	<string name="imci_general_patient_details_review_problems">Problems</string>
	<string name="imci_general_patient_details_first_name_hint">Please enter child\'s first name</string>
	<string name="imci_general_patient_details_surname_hint">Please enter child\'s surname</string>
	<string name="imci_general_patient_details_weight_hint">Enter value between 0 and 100</string>
	<string name="imci_general_patient_details_temperature_hint">Enter value between 0 and 50</string>
	<string name="imci_general_danger_signs_title">Danger Signs</string>
	<string name="imci_general_danger_signs_radio_drink_breastfeed">Not able to Drink or Breastfeed:</string>
	<string name="imci_general_danger_signs_radio_vomits">Vomits Everything:</string>
	<string name="imci_general_danger_signs_radio_convulsions">History of Convulsions:</string>
	<string name="imci_general_danger_signs_radio_lethargic_or_unconscious">Lethargic or Unconscious:</string>
	<string name="imci_general_danger_signs_radio_convulsing_now">Convulsing Now:</string>
	<string name="imci_general_danger_signs_review_drink_breastfeed">Not able to Drink or Breastfeed</string>
	<string name="imci_general_danger_signs_review_vomits">Vomits Everything</string>
	<string name="imci_general_danger_signs_review_convulsions">History of Convulsions</string>
	<string name="imci_general_danger_signs_review_lethargic_or_unconscious">Lethargic or Unconscious</string>
	<string name="imci_general_danger_signs_review_convulsing_now">Convulsing Now</string>
	<string name="imci_breathing_assessment_title">Breathing Assessment</string>
	<string name="imci_breathing_assessment_radio_cough_difficult_breathing">Does the child have cough or difficult breathing?
	</string>
	<string name="imci_breathing_assessment_cough_duration">For how long? (days)</string>
	<string name="imci_breathing_assessment_breaths_per_minute">Breaths per minute:</string>
	<string name="imci_breathing_assessment_radio_chest_indrawing">Chest indrawing:</string>
	<string name="imci_breathing_assessment_radio_stridor">Stridor:</string>
	<string name="imci_breathing_assessment_review_cough_difficult_breathing">Cough or Difficult Breathing</string>
	<string name="imci_breathing_assessment_review_cough_duration">For How Long? (days)</string>
	<string name="imci_breathing_assessment_review_breaths_per_minute">Breaths per Minute</string>
	<string name="imci_breathing_assessment_review_chest_indrawing">Chest Indrawing</string>
	<string name="imci_breathing_assessment_review_stridor">Stridor</string>
	<string name="imci_breathing_assessment_breaths_per_minute_hint">Enter breaths per min</string>
	<string name="imci_breathing_assessment_cough_duration_hint">Enter value between 1 and 365</string>
	<string name="imci_diarrhoea_assessment_title">Diarrhoea Assessment</string>
	<string name="imci_diarrhoea_assessment_radio_diarrhoea">Does the child have diarrhoea?</string>
	<string name="imci_diarrhoea_assessment_diarrhoea_duration">For how long? (days)</string>
	<string name="imci_diarrhoea_assessment_radio_blood_stools">Is there blood in the stools?</string>
	<string name="imci_diarrhoea_assessment_radio_sunken_eyes">Sunken eyes:</string>
	<string name="imci_diarrhoea_assessment_radio_lethargic_or_unconscious">Lethargic or unconscious:</string>
	<string name="imci_diarrhoea_assessment_radio_restless_irritable">Restless / irritable:</string>
	<string name="imci_diarrhoea_assessment_radio_cholera_in_area">Cholera in Area:</string>
	<string name="imci_diarrhoea_assessment_radio_child_fluid">Offer the child fluid</string>
	<string name="imci_diarrhoea_assessment_radio_child_fluid_not_able">Not able to \ndrink</string>
	<string name="imci_diarrhoea_assessment_radio_child_fluid_drinking_poorly">Drinking poorly</string>
	<string name="imci_diarrhoea_assessment_radio_child_fluid_drinking_eagerly">Drinking eagerly, thirsty</string>
	<string name="imci_diarrhoea_assessment_radio_skin_pinch">Skin pinch</string>
	<string name="imci_diarrhoea_assessment_radio_skin_pinch_very_slowly">Very slowly \n(longer than \n2 seconds)</string>
	<string name="imci_diarrhoea_assessment_radio_skin_pinch_slowly">Slowly</string>
	<string name="imci_diarrhoea_assessment_radio_skin_pinch_immediate">Immediate</string>
	<string name="imci_diarrhoea_assessment_radio_lethargic_disabled_note">*chosen on \'Danger Signs\' assessment page</string>
	<string name="imci_diarrhoea_assessment_review_diarrhoea">Diarrhoea</string>
	<string name="imci_diarrhoea_assessment_review_diarrhoea_duration">For How Long? (days)</string>
	<string name="imci_diarrhoea_assessment_review_blood_stools">Blood in the Stools</string>
	<string name="imci_diarrhoea_assessment_review_sunken_eyes">Sunken Eyes</string>
	<string name="imci_diarrhoea_assessment_review_lethargic_or_unconscious">Lethargic or Unconscious:</string>
	<string name="imci_diarrhoea_assessment_review_restless_irritable">Restless / Irritable</string>
	<string name="imci_diarrhoea_assessment_review_cholera_in_area">Cholera in Area</string>
	<string name="imci_diarrhoea_assessment_review_child_fluid">Offer the Child Fluid</string>
	<string name="imci_diarrhoea_assessment_review_skin_pinch">Skin Pinch</string>
	<string name="imci_diarrhoea_assessment_diarrhoea_duration_hint">Enter value between 1 and 365</string>
	<string name="imci_fever_assessment_title">Fever Assessment</string>
	<string name="imci_fever_assessment_radio_fever">Does the child have fever?</string>
	<string name="imci_fever_assessment_radio_fever_no">No</string>
	<string name="imci_fever_assessment_radio_fever_history">History</string>
	<string name="imci_fever_assessment_radio_fever_feels_hot">Feels Hot</string>
	<string name="imci_fever_assessment_radio_fever_temperature">Temperature > 37.5</string>
	<string name="ccm_look_assessment_breathe_icon_font">&#xe000;</string>
	<string name="ccm_breath_counter_assessment_title">Breath Counter</string>
	<string name="ccm_breath_counter_assessment_timer_title">Timer</string>
	<string name="ccm_breath_counter_assessment_zero_count">0 Breaths</string>
	<string name="ccm_breath_counter_assessment_reset_icon_font">&#xe000;</string>
	<string name="ccm_breath_counter_assessment_increment_icon_font">&#xe000;</string>
	<string name="opinions_prompt_label">Share your opinion of the Supporting LIFE application with the world!</string>
	<string name="opinions_twitter_button">Twitter</string>
	<string name="opinions_facebook_button">Facebook</string>
	<string name="opinions_googleplus_button">Google+</string>
	<string name="opinions_twitter_icon_font">&#xe002;</string>
	<string name="opinions_facebook_icon_font">&#xe000;</string>
	<string name="opinions_googleplus_icon_font">&#xe001;</string>
	<string name="language_preference_category">Language</string>
	<string name="language_list_preference_title">Language Selection</string>
	<string name="language_list_preference_summary">Choose default language for app</string>
	<string name="breathing_duration_preference_category">Breath Counter</string>
	<string name="breathing_duration_list_preference_title">Breath Counter Duration</string>
	<string name="breathing_duration_list_preference_summary">Choose breath counter duration</string>
	<string name="sensor_preference_category">Vital Signs Sensor</string>
	<string name="sensor_list_preference_title">Zephyr Sensor Availability</string>
	<string name="sensor_list_preference_summary">Use zephyr sensor in CCM assessment</string>
	<string name="sensor_reading_duration_preference_title">Sensor Reading Duration</string>
	<string name="sensor_reading_duration_preference_summary">Choose sensor reading duration</string>
	<string name="validator_preference_category">Validator</string>
	<string name="validator_list_preference_title">Assessment Validation</string>
	<string name="validator_list_preference_summary">Turn on validation for medical assessment</string>
	<string name="splash_screen_image">Supporting LIFE Splash Screen</string>
	<string name="user_type_selection_title_text">User Type</string>
	<string name="user_type_selection_prompt_text">Please select an option:</string>
	<string name="user_type_selection_guest_user_button_text">Guest User</string>
	<string name="user_type_selection_hsa_user_button_text">HSA User</string>
	<string name="guest_user_icon_font">&#xf007;</string>
	<string name="hsa_user_icon_font">&#xf0f0;</string>
	<string name="user_registration_title_text">HSA User</string>
	<string name="user_registration_prompt_text">Please enter your login details:</string>
	<string name="user_registration_submit_button_text">Login</string>
	<string name="user_registration_clear_button_text">Clear</string>
</resources>