<?xml version="1.0" encoding="utf-8"?>
<!-- ============================================================ -->
<!-- SETTINGS/PREFERENCES -->
<!-- ============================================================ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- ============================================================ -->
    <!-- SYNC LOGO -->
    <!-- ============================================================ -->

	<!-- Language Selection -->
	<PreferenceCategory android:title="@string/language_preference_category"
	    android:key="language">

		<ListPreference android:key="language_selection"
            android:title="@string/language_list_preference_title"
            android:summary="@string/language_list_preference_summary"
            android:defaultValue="en"
            android:entries="@array/languageSelection"
            android:entryValues="@array/languageSelectionValues"/>        
    </PreferenceCategory>
    
	<!-- Breath Counter Duration -->
	<PreferenceCategory android:title="@string/breathing_duration_preference_category"
	    android:key="breathing_duration">

		<ListPreference android:key="breathing_duration_selection"
            android:title="@string/breathing_duration_list_preference_title"
            android:summary="@string/breathing_duration_list_preference_summary"
            android:defaultValue="60"
            android:entries="@array/breathingDurationSelection"
            android:entryValues="@array/breathingDurationSelectionValues"/>        
    </PreferenceCategory>
    
	<!-- Zephyr Sensor Availability -->
	<PreferenceCategory android:title="@string/sensor_preference_category"
	    android:key="sensor_availability">

		<ListPreference android:key="sensor_availability_selection"
            android:title="@string/sensor_list_preference_title"
            android:summary="@string/sensor_list_preference_summary"
            android:defaultValue="No"
            android:entries="@array/sensorAvailabilitySelection"
            android:entryValues="@array/sensorAvailabilitySelectionValues"/>
		
		<ListPreference android:key="sensor_reading_duration_selection"
            android:title="@string/sensor_reading_duration_preference_title"
            android:summary="@string/sensor_reading_duration_preference_summary"
            android:defaultValue="30"
            android:entries="@array/sensorReadingDurationSelection"
            android:entryValues="@array/sensorReadingDurationSelectionValues"/>     
    </PreferenceCategory>
    
	
	<!-- Validator Preference -->
	<PreferenceCategory android:title="@string/validator_preference_category"
	    android:key="validator_preference">

		<ListPreference android:key="validator_preference_selection"
            android:title="@string/validator_list_preference_title"
            android:summary="@string/validator_list_preference_summary"
            android:defaultValue="No"
            android:entries="@array/validatorPreferenceSelection"
            android:entryValues="@array/validatorPreferenceSelectionValues"/>
    </PreferenceCategory>
</PreferenceScreen>
