<?xml version="1.0" encoding="utf-8"?>
<!-- ============================================================ -->
<!-- USER TYPE SELECTION SCREEN 								  -->
<!-- ============================================================ -->
   
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/SupportingLifePage"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="6dip">

	<View
		android:layout_width="match_parent"
		android:layout_height="7dp" />
    
	 <RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
	
		<!-- ============================================================ -->
		<!-- SUPPORTING LIFE IMAGE -->
		<!-- ============================================================ -->
	    <ImageView
	        android:id="@+id/user_selection_supporting_life_image"
	        android:layout_width="wrap_content"
	        android:layout_height="120dp"
	        android:contentDescription="@string/splash_screen_image"
	        android:scaleType="fitCenter"
	        android:src="@drawable/splash_screen_image" />

		<!-- ============================================================ -->
		<!-- USER TYPE SELECTION TITLE TEXT -->
		<!-- ============================================================ -->	    
	    <TextView 
	        android:id="@+id/user_type_selection_text"
	        style="@style/UserTypeSelectionTitle"
	        android:text="@string/user_type_selection_title_text"
	        android:layout_below="@+id/user_selection_supporting_life_image"/>

		<!-- ============================================================ -->
		<!-- USER TYPE SELECTION PROMPT -->
		<!-- ============================================================ -->		    
	    <TextView
	        android:id="@+id/user_type_selection_prompt_text"
            style="@style/UserTypeSelectionPrompt"
            android:text="@string/user_type_selection_prompt_text"
            android:layout_below="@+id/user_type_selection_text"/>
	    
		<!-- ============================================================ -->
		<!-- GUEST USER BUTTON -->
		<!-- ============================================================ -->
		<Button 
		    android:id="@+id/user_type_selection_guest_user_button"
		    style="?android:attr/buttonStyleSmall"
			android:layout_width="90dp"
			android:layout_height="90dp"
			android:layout_below="@+id/user_type_selection_prompt_text"
			android:layout_marginTop="20dp" 
			android:layout_marginLeft="40dp"
			android:background="@drawable/user_selection_user_button"
			android:text="@string/guest_user_icon_font"
			android:textSize="90sp"
			android:textColor="@color/icon_button_text_color"
			android:onClick="onClickUserTypeButton" />
		
		<TextView
		    android:id="@+id/user_type_selection_guest_user_button_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/user_type_selection_guest_user_button"
		    android:layout_alignRight="@+id/user_type_selection_guest_user_button"
		    android:layout_alignLeft="@+id/user_type_selection_guest_user_button"
		    android:gravity="center"
		    android:text="@string/user_type_selection_guest_user_button_text"
		    android:textColor="@color/DarkGreen"
		    android:textSize="18sp"
		    android:textStyle="bold" />
		
		<!-- ============================================================ -->
		<!-- HSA USER BUTTON -->
		<!-- ============================================================ -->
		<Button
		    android:id="@+id/user_type_selection_hsa_user_button"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="90dp"
		    android:layout_height="90dp"
		    android:layout_below="@+id/user_type_selection_prompt_text"
		    android:layout_marginTop="20dp" 
			android:layout_marginRight="40dp" 
		    android:layout_alignParentRight="true"
		    android:background="@drawable/user_selection_user_button"
		    android:text="@string/hsa_user_icon_font"
		    android:textSize="90sp"
		    android:textColor="@color/icon_button_text_color"
		    android:onClick="onClickUserTypeButton" />

		<TextView
		    android:id="@+id/user_type_selection_hsa_user_button_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/user_type_selection_hsa_user_button"
		    android:layout_alignRight="@+id/user_type_selection_hsa_user_button"
		    android:layout_alignLeft="@+id/user_type_selection_hsa_user_button"
		    android:gravity="center"
		    android:text="@string/user_type_selection_hsa_user_button_text"
		    android:textColor="@color/DarkGreen"
		    android:textSize="18sp"
		    android:textStyle="bold" />

	</RelativeLayout>
			
</LinearLayout>