<?xml version="1.0" encoding="utf-8"?>
<!-- ============================================================ -->
<!-- OPINIONS SCREEN -->
<!-- ============================================================ -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- ============================================================ -->
    <!-- OPINIONS PROMPT 											  -->
    <!-- ============================================================ -->
     <LinearLayout android:id="@+id/opinions_prompt_label_group" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        
	 	<TextView android:id="@+id/opinions_prompt_label"
	 	    style="@style/OpinionsHeaderLabel"
	 	    android:text="@string/opinions_prompt_label"/>
 	</LinearLayout>
 	
    <!-- ============================================================ -->
    <!-- SOCIAL NETWORK ICON - TWITTER 							  	  -->
    <!-- ============================================================ -->
    <LinearLayout android:id="@+id/opinions_twitter_group" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        
		<Button
		    android:id="@+id/opinions_twitter_button"
		    android:layout_width="90dp"
		    android:layout_height="90dp"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="20dp"
		    android:background="@drawable/user_selection_user_button"
		    android:gravity="center"
		    android:onClick="onClickOpinionsButton"
		    android:text="@string/opinions_twitter_icon_font"
		    android:textColor="@color/default_black_icon_button_text_color"
		    android:textSize="70sp"/>
		
		<TextView
		    android:id="@+id/opinions_twitter_button_text"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="2dp"
		    android:gravity="center"
		    android:text="@string/opinions_twitter_button"
		    android:textColor="@color/DarkGreen"
		    android:textSize="18sp"
		    android:textStyle="bold"/>
    </LinearLayout>
    
    <!-- ============================================================ -->
    <!-- SOCIAL NETWORK ICON - FACEBOOK							  	  -->
    <!-- ============================================================ -->
    <LinearLayout android:id="@+id/opinions_facebook_group" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        
		<Button
		    android:id="@+id/opinions_facebook_button"
		    android:layout_width="90dp"
		    android:layout_height="90dp"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="20dp"
		    android:background="@drawable/user_selection_user_button"
		    android:gravity="center"
		    android:onClick="onClickOpinionsButton"
		    android:text="@string/opinions_facebook_icon_font"
		    android:textColor="@color/default_black_icon_button_text_color"
		    android:textSize="70sp"/>
		
		<TextView
		    android:id="@+id/opinions_facebook_button_text"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="2dp"
		    android:gravity="center"
		    android:text="@string/opinions_facebook_button"
		    android:textColor="@color/DarkGreen"
		    android:textSize="18sp"
		    android:textStyle="bold"/>
    </LinearLayout>

    <!-- ============================================================ -->
    <!-- SOCIAL NETWORK ICON - GOOGLE PLUS						  	  -->
    <!-- ============================================================ -->
    <LinearLayout android:id="@+id/opinions_googleplus_group" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        
		<Button
		    android:id="@+id/opinions_googleplus_button"
		    android:layout_width="90dp"
		    android:layout_height="90dp"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="20dp"
		    android:background="@drawable/user_selection_user_button"
		    android:gravity="center"
		    android:onClick="onClickOpinionsButton"
		    android:text="@string/opinions_googleplus_icon_font"
		    android:textColor="@color/default_black_icon_button_text_color"
		    android:textSize="70sp"/>
		
		<TextView
		    android:id="@+id/opinions_googleplus_button_text"
		    android:layout_width="120dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="2dp"
		    android:gravity="center"
		    android:text="@string/opinions_googleplus_button"
		    android:textColor="@color/DarkGreen"
		    android:textSize="18sp"
		    android:textStyle="bold"/>
    </LinearLayout>
    
</LinearLayout>