<?xml version="1.0" encoding="utf-8"?>
<!-- ============================================================ -->
<!-- USER REGISTRATION SCREEN 									  -->
<!-- ============================================================ -->
   
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/SupportingLifePage"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="6dip">

	<View
		android:layout_width="match_parent"
		android:layout_height="7dp" />
    
	 <RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
	
		<!-- ============================================================ -->
		<!-- SUPPORTING LIFE IMAGE -->
		<!-- ============================================================ -->
	    <ImageView
	        android:id="@+id/user_selection_supporting_life_image"
	        android:layout_width="wrap_content"
	        android:layout_height="120dp"
	        android:contentDescription="@string/splash_screen_image"
	        android:scaleType="fitCenter"
	        android:src="@drawable/splash_screen_image" />

		<!-- ============================================================ -->
		<!-- USER REGISTRATION TITLE TEXT -->
		<!-- ============================================================ -->	    
	    <TextView 
	        android:id="@+id/user_registration_text"
	        style="@style/UserRegistrationTitle"
	        android:text="@string/user_registration_title_text"
	        android:layout_below="@+id/user_selection_supporting_life_image"/>

		<!-- ============================================================ -->
		<!-- USER REGISTRATION PROMPT -->
		<!-- ============================================================ -->		    
	    <TextView
	        android:id="@+id/user_registration_prompt_text"
            style="@style/UserRegistrationPrompt"
            android:text="@string/user_registration_prompt_text"
            android:layout_below="@+id/user_registration_text"/>
	    
		<!-- ============================================================ -->
		<!-- CLEAR REGISTRATION DETAILS BUTTON -->
		<!-- ============================================================ -->		
		<Button
			android:id="@+id/user_registration_clear_button"
			style="@style/UserRegistrationButtonAppearance" 
			android:layout_width="90dp"
			android:layout_height="50dp"
			android:layout_below="@+id/user_registration_prompt_text"
			android:layout_marginTop="20dp" 
			android:layout_marginLeft="40dp"
			android:layout_marginBottom="20dp"
			android:background="@drawable/user_registration_clear_button"
			android:text="@string/user_registration_clear_button_text"
			android:onClick="onClickUserRegistrationButton"/>
		
		<!-- ============================================================ -->
		<!-- SUBMIT REGISTRATION DETAILS BUTTON -->
		<!-- ============================================================ -->		
		<Button
			android:id="@+id/user_registration_submit_button"
			style="@style/UserRegistrationButtonAppearance" 
			android:layout_width="90dp"
			android:layout_height="50dp"
			android:layout_below="@+id/user_registration_prompt_text"
			android:layout_toRightOf="@+id/user_registration_clear_button"
			android:layout_marginTop="20dp" 
			android:layout_marginLeft="40dp"
			android:layout_marginRight="40dp"
			android:layout_marginBottom="20dp"
			android:background="@drawable/user_registration_submit_button"
			android:text="@string/user_registration_submit_button_text"
			android:onClick="onClickUserRegistrationButton"/>
		
	</RelativeLayout>
			
</LinearLayout>